# curtis

./: .gitignore  Cargo.toml  LICENSE  README.md  curtis.toml.example
binance/: Cargo.toml
binance/src/: adaptor.rs  models.rs
core/: Cargo.toml
core/src/: lib.rs  models.rs  types.rs  utils.rs
core/src/utils/: net.rs  serde.rs
gate/: Cargo.toml
gate/src/: adaptor.rs  models.rs
huobi/: Cargo.toml
huobi/src/: adaptor.rs  models.rs
okex/: Cargo.toml
okex/src/: adaptor.rs  lib.rs  models.rs
src/: config.rs  main.rs
src/engines/: futures.rs  mod.rs  spot.rs  strategy.rs
src/engines/strategy/: arbitrage.rs
src/engines/strategy/arbitrage/: market_arbitrage.rs
src/tui/: event.rs  futures.rs  mod.rs  preclude.rs  spot.rs
