[package]
name = "curtis-binance"
version = "0.1.0"
authors = ["Codeb Fan <codeb2cc@gmail.com>"]
edition = "2018"

[dependencies]
actix = "0.8"
actix-codec = "0.1"
awc = { version = "0.2", features = ["ssl", "flate2-rust"] }
base64 = "0.11"
chrono = "0.4"
futures = "0.1"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = "0.1"
url = "2.1"

curtis-core = { path = "../core" }